# mcp-text-to-speech

./: .env.example  .gitignore  CANTONESE_IMPLEMENTATION_COMPLETE.md  CANTONESE_SUPPORT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.slim  GITHUB_PACKAGES_STATUS.md  README.md  docker-compose.yml  pyproject.toml  test_tts.py
.github/workflows/: ci.yml  docker-publish.yml
scripts/: dev-setup.sh  docker-deploy.sh
src/mcp_text_to_speech/: __init__.py  __main__.py  server.py  server_online.py
